--- a/resolver_data_entry_server/package.json
+++ b/resolver_data_entry_server/package.json
@@ -14,7 +14,7 @@
 		"body-parser": "^1.19.0",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
-		"express": "~4.16.1",
+		"express": "^4.18.2",
 		"express-rate-limit": "^5.2.6",
 		"helmet": "^4.1.1",
 		"hpp": "^0.2.3",
@@ -25,7 +25,7 @@
 		"node-fetch": "^2.6.1",
 		"pug": "^3.0.2",
 		"pug-lint": "^2.6.0",
-		"xss": "^1.0.8"
+		"xss": "^1.0.14"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.6"
